first sonar fixes
Signed-off-by: Ronny Polley <ronnypolley@googlemail.com>